New-Upload-1755854042013/objects/Profile_Admin__c.object
<CustomObject>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a custom profile</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the profile</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <description>User license associated with the profile</description>
        <label>User License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Profile Admin</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Admins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>